@@ -79,7 +79,6 @@ AC_ARG_ENABLE(msglimit, [AC_HELP_STRING([--disable-msglimit],[disable message li
 AC_ARG_ENABLE(null, [AC_HELP_STRING([--disable-null],[disable null sender throttling])])
 AC_ARG_ENABLE(p0f, [AC_HELP_STRING([--disable-p0f],[disable p0f support])])
 AC_ARG_ENABLE(pad, [AC_HELP_STRING([--disable-pad],[disable RFC 2821 reply line padding])])
-AC_ARG_ENABLE(pdq, [AC_HELP_STRING([--disable-pdq],[disable Posted Domain Query async DNS code (experimental)])])
 AC_ARG_ENABLE(quit, [AC_HELP_STRING([--disable-quit],[disable quit, restart, restart-if options])])
 AC_ARG_ENABLE(sav, [AC_HELP_STRING([--disable-sav],[disable sender address verification])])
 AC_ARG_ENABLE(save, [AC_HELP_STRING([--disable-save],[disable save message support])])
@@ -111,7 +110,6 @@ AS_IF([test ${enable_msglimit:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_MSG_LI
 AS_IF([test ${enable_null:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_NULL)])
 AS_IF([test ${enable_p0f:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_P0F)])
 AS_IF([test ${enable_pad:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_PAD)])
-AS_IF([test ${enable_pdq:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(ENABLE_PDQ)])
 AS_IF([test ${enable_quit:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(ENABLE_OPTION_QUIT)])
 AS_IF([test ${enable_sav:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_SAV)])
 AS_IF([test ${enable_savdid:='yes'} = 'yes'],[enable_save='yes'; AC_DEFINE_UNQUOTED(FILTER_SAVDID)])
