@@ -277,10 +277,10 @@ clickReplyLog(Session *sess, va_list args)
 	LOG_TRACE(sess, 246, clickReplyLog);
 
 	if (*optClickUrl.string == '\0' || sess->msg.mail == NULL
-	|| CLIENT_ANY_SET(sess, CLIENT_IS_BLACK|CLIENT_IS_GREY|CLIENT_IS_WHITE)
+	|| CLIENT_ANY_SET(sess, CLIENT_IS_LOCAL_BLACK|CLIENT_IS_GREY|CLIENT_IS_WHITE)
 	|| MSG_ANY_SET(sess, MSG_DISCARD|MSG_POLICY)
-	|| MAIL_ANY_SET(sess, MAIL_IS_BLACK|MAIL_IS_WHITE)
-	|| RCPT_ANY_SET(sess, RCPT_IS_BLACK|RCPT_IS_WHITE|RCPT_FAILED)
+	|| MAIL_ANY_SET(sess, MAIL_IS_LOCAL_BLACK|MAIL_IS_WHITE)
+	|| RCPT_ANY_SET(sess, RCPT_IS_LOCAL_BLACK|RCPT_IS_WHITE|RCPT_FAILED)
 	)
 		return SMTPF_CONTINUE;
 
